# seed-server

./: Cargo.toml  Makefile.toml  README.md
client/: Cargo.toml  index.html
client/src/: lib.rs
server/: Cargo.toml
server/src/: db_mongo.rs  errors.rs  main.rs  person_handlers.rs
server/src/db/: db_mongo.rs  mod.rs
server/src/errors/: errors.rs  mod.rs
server/src/handlers/: mod.rs  person_handlers.rs
shared/: Cargo.toml
shared/src/: lib.rs  person.rs
shared/src/models/: mod.rs  person.rs
