# /client/Cargo.toml
[package]
name = "client"
version = "0.1.0"
authors = ["Léon GENGOUX <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = "^0.7.0"
serde = { version = "^1.0.110", features = ['derive'] }
wasm-bindgen = "0.2.62"
web-sys = "0.3.39"

shared = { path = "../shared" }






