# /server/Cargo.toml

[package]
name = "server"
version = "0.1.0"
authors = ["lgeng"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
mongodb = "0.9.0"
r2d2 = "0.8.8"
bson = "0.14.1"
r2d2-mongodb = "0.2.2"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.45"
#actix = "0.10.0-alpha.3"
json = "0.12.1"
env_logger = "0.7.1"
failure = "0.1.7"
thiserror = "1.0.17"

shared = { path = "../shared" }

