# /shared/Cargo.toml

[package]
name = "shared"
version = "0.1.0"
authors = ["LGGX <email@address.com>"]
edition = "2018"

[dependencies]
serde = { version = "^1.0.106", features = ['derive'] }
serde_json = "1.0.45"
dotenv = "0.15.0"
thiserror = "1.0.17"
mongodb = "0.9.0"
r2d2 = "0.8.8"
bson = "0.14.1"
r2d2-mongodb = "0.2.2"